--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <link rel="stylesheet" href="../src/sass/style.scss">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-
+    <script src="https://kit.fontawesome.com/19e4c862b5.js" crossorigin="anonymous"></script>
+    
     <title>React App</title>
   </head>
   <body>
